--- a/mainProg/pom.xml
+++ b/mainProg/pom.xml
@@ -8,5 +8,39 @@
     <artifactId>main</artifactId>
     <version>1.0-SNAPSHOT</version>
 
-
+    <packaging>jar</packaging>
+    <properties>
+        <jdk.version>1.7</jdk.version>
+    </properties>
+    <name>Konfigurator komputera</name>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>2.3.2</version>
+                <configuration>
+                    <source>${jdk.version}</source>
+                    <target>${jdk.version}</target>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>2.4</version>
+                <configuration>
+                    <archive>
+                        <manifest>
+                            <mainClass>start.start</mainClass>
+                        </manifest>
+                    </archive>
+                </configuration>
+            </plugin>
+        </plugins>
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+            </resource>
+        </resources>
+    </build>
 </project>
