--- a/mainProg/pom.xml
+++ b/mainProg/pom.xml
@@ -13,6 +13,13 @@
         <jdk.version>1.7</jdk.version>
     </properties>
     <name>Konfigurator komputera</name>
+    <dependencies>
+    <dependency>
+        <groupId>junit</groupId>
+        <artifactId>junit</artifactId>
+        <version>4.11</version>
+    </dependency>
+    </dependencies>
     <build>
         <plugins>
             <plugin>
